@@ -1,3 +1,6 @@
+4/1/12
+  Statusbar text now has 5 colours
+
 29/12/11
   Statusbar takes text from stdin (e.g. conky)
 
